--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <h1 class="title is-1 publication-title">Long Video Diffusion Generation with Segmented Cross-Attention and Content-Rich Video Data Curation</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://cakeyanxin.github.io">Xin Yan</a>,</span>
+              <a href="https://cakeyan.github.io">Xin Yan</a>,</span>
             <span class="author-block">
               <a href="https://scholar.google.com/citations?user=EzYiBeUAAAAJ&hl=en">Yuxuan Cai</a>,</span>
             <span class="author-block">
