--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="content-overlay">
         <h1>Presto</h1>
         <p>Create long videos with rich content and long-range coherence from text prompts.</p> 
-        <a href="https://example.com" class="cta-button"><span class="icon"><i class="fas fa-file-pdf"></i></span>Paper</a>
+        <a href="https://arxiv.org/abs/2412.01316" class="cta-button"><span class="icon"><i class="fas fa-file-pdf"></i></span>Paper</a>
         <a href="https://github.com/rhymes-ai/Allegro" class="cta-button"><span class="icon"><i class="fab fa-github"></i></span>Code (Soon)</a>
       </div>
 </header>
@@ -83,7 +83,7 @@
               <a href="https://openreview.net/profile?id=~Qiuyue_Wang2">Qiuyue Wang</a>,
             </span>
             <span class="author-block">
-              <a href="https://openreview.net/profile?id=~Yuan_Zhou12">Yuan Zhou</a>,
+              <a href="https://scholar.google.com/citations?hl=en&user=tSDTmxAAAAAJ">Yuan Zhou</a>,
             </span>
             <span class="author-block">
               <a href="https://scholar.google.com/citations?user=OdE3MsQAAAAJ&hl=zh-CN">Wenhao Huang</a>,
@@ -274,9 +274,10 @@
 
   <div class="container is-max-desktop content" id="bibtex">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{yan2024long,
-  author    = {Yan, Xin and Cai, Yuxuan and Wang, Qiuyue and Zhou, Yuan and Huang, Wenhao and Yang, Huan},
+    <pre><code>@article{yan2024presto,
   title     = {Long Video Diffusion Generation with Segmented Cross-Attention and Content-Rich Video Data Curation},
+  author    = {Yan, Xin and Cai, Yuxuan and Wang, Qiuyue and Zhou, Yuan and Huang, Wenhao and Yang, Huan},
+  journal   = {arXiv preprint arXiv:2412.01316},
   year      = {2024},
 }</code></pre>
   </div>
