--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         <h1>Presto</h1>
         <p>Create long videos with rich content and long-range coherence from text prompts.</p> 
         <a href="https://arxiv.org/abs/2412.01316" class="cta-button"><span class="icon"><i class="fas fa-file-pdf"></i></span>Paper</a>
-        <a href="https://github.com/rhymes-ai/Allegro" class="cta-button"><span class="icon"><i class="fab fa-github"></i></span>Code (Soon)</a>
+        <a href="https://github.com/Cakeyan/Presto" class="cta-button"><span class="icon"><i class="fab fa-github"></i></span>Code</a>
+        <a href="https://github.com/rhymes-ai/Allegro" class="cta-button"><span class="icon"><i class="fab fa-github"></i></span>Allegro</a>
       </div>
 </header>
 
